--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
+        <meta name="yandex-verification" content="e6203dd264c08dc4" />
         <title>UTM5 Личный кабинет</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
